Fixed general layout issues

--- a/src/components/Project/index.css
+++ b/src/components/Project/index.css
@@ -11,6 +11,7 @@
     transition: scale 0.3s ease-in;
     animation:zoomIn 2s;
     max-width: 400px;
+    z-index: 0;
 }
 
 .project-info-container{
@@ -96,10 +97,10 @@ img.cranial-electrical-stimulation-device-simulation{
     transition: color 0.3s ease-in;
 }
 
-@media screen and (min-width:375px){
+@media screen and (min-width:320px){
     .project-container{
         font-size: 15px;
-        width:20em;
+        width:17.5em;
     }
 }
 
