--- a/src/pages/Projects/index.css
+++ b/src/pages/Projects/index.css
@@ -4,6 +4,8 @@
     align-items: center;
     flex-wrap: wrap;
     gap:4em;
+    padding-top: 12.5em;
+    padding-bottom: 5em;
     /* overflow-y: hidden; */
 }
 
@@ -14,8 +16,10 @@
     background-color: black;
     color:var(--dominant-colour);
     padding: 0;
-    margin-bottom:5em;
-    
+    margin-bottom:2em;
+    margin-top: 3.5em;
+    position: fixed;
+    z-index: 2;
 }
 
 .page-title h1{
@@ -38,6 +42,7 @@
         align-items: center;
         flex-wrap: wrap;
         padding:2.5em;
+        padding-top:12.5em;
         /* gap:4em; */
     }
     
